--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open & nodemon server/server.js",
+    "start": "webpack serve --open",
+    "server": "nodemon server/server.js",
     "dev": "webpack-dev-server --mode development --open --hot"
   },
   "keywords": [],
